manifests/governance/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: governance
spec:
  rules:
  - host: governance.example.com
    http:
      paths:
      - backend:
          serviceName: governance
          servicePort: http
